// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteWidget computes positionX and positionY correctly with points 1`] = `
<div>
  <group>
    <image
      height="20"
      width="20"
      x="239"
      y="194"
    />
  </group>
</div>
`;

exports[`DeleteWidget computes positionX and positionY correctly without points 1`] = `
<div>
  <group>
    <image
      height="20"
      width="20"
      x="15"
      y="30"
    />
  </group>
</div>
`;
